# vulkan_starter

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
assets/shaders/: the_shader.slang.spv
sources/: main.cxx  print.hxx  utils.cxx  utils.hxx  vk_fmt.hxx  vma_impl.cxx
sources/shaders/: the_shader.slang
